# Naphwiki-Timeline

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: login.json  timeline.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window_tracking.rs
