[package]
name = "naphwiki-timeline"
version = "0.1.1"
description = "Naphwiki event timeline as an always-on-top desktop strip"
edition = "2021"
license = "MIT"
repository = "https://github.com/JoaLie/Naphwiki-Timeline"

[lib]
name = "naphwiki_timeline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
