[package]
name = "naphwiki-timeline"
version = "0.1.5"
description = "Naphwiki event timeline as an always-on-top desktop strip"
edition = "2021"
license = "MIT"
repository = "https://github.com/JoaLie/Naphwiki-Timeline"

[lib]
name = "naphwiki_timeline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = "2"
winreg = "0.55"
